log
Thu 25 Apr 2024 03:33:00 PM UTC: 
 tests:  0|6
total_score: 0/70
881541c
Thu 25 Apr 2024 04:06:32 PM UTC: 
 hashmap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:63:17: error: expected expression before ‘Pair’
   63 |   map->buckets (Pair *)calloc(capacity,sizeof(Pair*));
      |                 ^~~~
hashmap.c:63:3: error: called object is not a function or function pointer
   63 |   map->buckets (Pair *)calloc(capacity,sizeof(Pair*));
      |   ^~~
hashmap.c:63:24: error: expected ‘;’ before ‘calloc’
   63 |   map->buckets (Pair *)calloc(capacity,sizeof(Pair*));
      |                        ^~~~~~
      |                        ;
Compilation failed
6061d92
Thu 25 Apr 2024 04:06:49 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:63:17: error: expected expression before ‘Pair’
   63 |   map->buckets (Pair**)calloc(capacity,sizeof(Pair*));
      |                 ^~~~
hashmap.c:63:3: error: called object is not a function or function pointer
   63 |   map->buckets (Pair**)calloc(capacity,sizeof(Pair*));
      |   ^~~
hashmap.c:63:24: error: expected ‘;’ before ‘calloc’
   63 |   map->buckets (Pair**)calloc(capacity,sizeof(Pair*));
      |                        ^~~~~~
      |                        ;
Compilation failed
b0d8f1c
Thu 25 Apr 2024 04:07:22 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:63:19: error: ‘HashNode’ undeclared (first use in this function)
   63 |   map->buckets = (HashNode **)calloc(capacity, sizeof(HashNode *));
      |                   ^~~~~~~~
hashmap.c:63:19: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:63:30: error: expected expression before ‘)’ token
   63 |   map->buckets = (HashNode **)calloc(capacity, sizeof(HashNode *));
      |                              ^
Compilation failed
e818bd6
Thu 25 Apr 2024 04:08:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:63:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘HashMap **’ {aka ‘struct HashMap **’} [-Werror=incompatible-pointer-types]
   63 |   map->buckets = (HashMap **)calloc(capacity, sizeof(HashMap *));
      |                ^
cc1: all warnings being treated as errors
Compilation failed
55b7221
Thu 25 Apr 2024 04:09:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3e619bc
Thu 25 Apr 2024 04:13:42 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
96e151c
Mon 29 Apr 2024 02:08:52 AM UTC: 
 hashmap.c | 25 ++++++++++++++++++++++---
 1 file changed, 22 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
ac87a2b
Mon 29 Apr 2024 02:31:38 AM UTC: 
 hashmap.c | 26 +++++++++++++++++++++-----
 1 file changed, 21 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c:124:1: error: expected ‘;’, ‘,’ or ‘)’ before ‘{’ token
  124 | {
      | ^
Compilation failed
75e2455
Mon 29 Apr 2024 02:34:39 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
6533af9
Mon 29 Apr 2024 02:40:43 AM UTC: 
 hashmap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
54b8f01
Mon 29 Apr 2024 02:50:12 AM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:159:1: error: control reaches end of non-void function [-Werror=return-type]
  159 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1de756d
Mon 29 Apr 2024 02:50:26 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:159:1: error: control reaches end of non-void function [-Werror=return-type]
  159 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
32a8af8
Mon 29 Apr 2024 02:51:22 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
027f9fc
Mon 29 Apr 2024 02:52:22 AM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  16|1
total_score: 60/70
2312b28
Mon 29 Apr 2024 02:55:36 AM UTC: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  17|0
total_score: 70/70
84aacb4
